--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <a href="/notes">Notes</a>
         <a href="https://github.com/arnavcs">Github</a>
-        <a href="./assets/resume/arnav-kumar.pdf">Resume</a>
+        <a href="./resume/arnav-kumar.pdf">Resume</a>
       </nav>
     </header>
     <main>
@@ -22,18 +22,136 @@
             <td>Jan 2023</td>
           </tr></thead>
           <tbody><tr><td colspan=2><ul>
-            <li>A visual file explorer of an IPFS written in Golang, Python, and JavaScript that uses one of Co:here's NLP models to summarize and categorize files based on metadata, and Estuary's API to fetch the files from the IPFS.</li>
+            <li>A visual file explorer of an IPFS written in Golang, Python, and JavaScript that uses one of Cohere's NLP models to summarize and categorize files based on metadata, and Estuary's API to fetch the files from the IPFS</li>
           </ul></td></tr></tbody>
         </table>
         <table>
           <thead><tr>
-            <th>Prognosing IPF <a href="./assets/osic-cwsf-paper.pdf">[CWSF paper]</a> <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a></th>
+            <th>Prognosing IPF <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a></th>
             <td>Dec 2020 - Jun 2021</td>
           </tr></thead>
           <tbody><tr><td colspan=2><ul>
-            <li>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients of Idiopathic Pulmonary Fibrosis and give a level of confidence in the prediction.</li>
+            <li>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients of Idiopathic Pulmonary Fibrosis and give a level of confidence in the prediction</li>
           </ul></td></tr></tbody>
         </table>
+      </section>
+
+      <section class="card-container">
+        <h2>Presentations & Lectures</h2>
+        <table>
+          <thead><tr>
+            <th>Infinite Lists and Streams <span class="location">@ Webber Academy Programming Club</span> <a>[notes]</a></th>
+            <td>Oct 13, 2023</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+            <li>An introduction to simulating infinite lists and motivation into the creation of iterators with examples</li>
+          </ul></td></tr></tbody>
+        </table>
+        <table>
+          <thead><tr>
+            <th>On the Catalan Numbers <span class="location">@ Webber Academy Math Society</span> <a href="./presentations/231011-catalan-numbers.pdf">[notes]</a></th>
+            <td>Oct 11, 2023</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+            <li>A derivation of the closed formula for the Catalan Numbers and examples of well known problems where the Catalan Numbers appear</li>
+          </ul></td></tr></tbody>
+        </table>
+      </section>
+
+      <section>
+          <h2>University Courses</h2>
+          <table>
+            <caption>Waterloo Undergraduate Courses</caption>
+            <thead>
+              <tr>
+                <th scope=col rowspan=2>Term</th>
+                <th scope=col colspan=11>Course</th>
+              </tr>
+              <tr>
+                <th scope=col colspan=2>MATH</th>
+                <th scope=col colspan=1>STAT</th>
+                <th scope=col colspan=1>CO</th>
+                <th scope=col colspan=2>CS</th>
+                <th scope=col colspan=1>ENGL</th>
+                <th scope=col colspan=1>PHYS</th>
+                <th scope=col colspan=1>JAPAN</th>
+                <th scope=col colspan=1>COOP</th>
+                <th scope=col colspan=1>PD</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Fall '22</td>
+                <td title="Algebra (Advanced Level)">145</td>
+                <td title="Calculus 1 (Advanced Level)">147</td>
+                <td></td>
+                <td></td>
+                <td title="Designing Functional Programs (Advanced Level)">145</td>
+                <td></td>
+                <td title="Introduction to Academic Writing">109</td>
+                <td title="Mechanics">121</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Winter '23</td>
+                <td title="Linear Algebra 1 (Advanced Level)">146</td>
+                <td title="Calculus 2 (Advanced Level)">148</td>
+                <td></td>
+                <td></td>
+                <td title="Elementary Algorithm Design and Data Abstraction (Advanced Level)">146</td>
+                <td></td>
+                <td title="Global English Literatures">108B</td>
+                <td title="Waves, Electricity and Magnetism">122</td>
+                <td></td>
+                <td></td>
+                <td title="Career Fundamentals">1</td>
+              </tr>
+              <tr>
+                <td>Spring '23</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td title="Co-operative Work Term at Dandelion Networks">1</td>
+                <td title="Processes for Technical Report Writing">11</td>
+              </tr>
+              <tr>
+                <td>Fall '23</td>
+                <td title="Linear Algebra 2 (Advanced Level)">245</td>
+                <td title="Calculus 3 (Advanced Level)">247</td>
+                <td title="Probability (Advanced Level)">240</td>
+                <td></td>
+                <td title="Logic and Computation (Enriched)">245E</td>
+                <td title="Object-Oriented Software Development (Enriched)">246E</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Winter '24</td>
+                <td title="Introduction to Combinatorics (Advanced Level)">249</td>
+                <td></td>
+                <td title="Statistics (Advanced Level)">241</td>
+                <td title="Introduction to Optimization (Advanced Level)">255</td>
+                <td title="Data Structures and Data Management (Enriched)">240E</td>
+                <td title="Foundations of Sequential Programs">241</td>
+                <td></td>
+                <td></td>
+                <td title="First-Year Japanese 1">101R</td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
       </section>
     </main>
     <footer>
