--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <h2>Presentations & Lectures</h2>
         <table>
           <thead><tr>
-            <th>Infinite Lists and Streams <span class="location">@ Webber Academy Programming Club</span> <a>[notes]</a></th>
+            <th>Streams and Lazy Evaluation <span class="location">@ Webber Academy Programming Club</span> <a href="./presentations/231013-streams.py">[notes]</a></th>
             <td>Oct 13, 2023</td>
           </tr></thead>
           <tbody><tr><td colspan=2><ul>
-            <li>An introduction to simulating infinite lists and motivation into the creation of iterators with examples</li>
+            <li>An introduction to simulating infinite lists with streams and their manipulation.</li>
           </ul></td></tr></tbody>
         </table>
         <table>
