--- a/index.html
+++ b/index.html
@@ -1,158 +1,238 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>Arnav Kumar</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
-      <h1 class="title">Arnav Kumar</h1>
+      <h1 id="title">Arnav Kumar</h1>
       <nav>
-        <a href="/notes">Notes</a>
         <a href="https://github.com/arnavcs">Github</a>
         <a href="./resume/arnav-kumar.pdf">Resume</a>
       </nav>
     </header>
     <main>
-      <section class="card-container">
-        <h2>Projects</h2>
-        <table>
-          <thead><tr>
-            <th>InterPlanetary File Explorer <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a> <a href="https://devpost.com/software/changeme">[devpost]</a></th>
-            <td>Jan 2023</td>
-          </tr></thead>
-          <tbody><tr><td colspan=2><ul>
-            <li>A visual file explorer of an IPFS written in Golang, Python, and JavaScript that uses one of Cohere's NLP models to summarize and categorize files based on metadata, and Estuary's API to fetch the files from the IPFS</li>
-          </ul></td></tr></tbody>
+      <nav>
+        <h1><a href="#title">Arnav Kumar</a></h1>
+        <ul>
+        <li><a href="#mathematics-competitions"
+        id="toc-mathematics-competitions">Mathematics Competitions</a>
+        <ul>
+        <li><a href="#competition-reference"
+        id="toc-competition-reference">Competition Reference</a></li>
+        <li><a href="#section" id="toc-section"></a></li>
+        </ul></li>
+        <li><a href="#projects" id="toc-projects">Projects</a>
+        <ul>
+        <li><a href="#interplanetary-file-explorer"
+        id="toc-interplanetary-file-explorer">Interplanetary File
+        Explorer</a></li>
+        <li><a href="#prognosing-idiopathic-pulmonary-fibrosis"
+        id="toc-prognosing-idiopathic-pulmonary-fibrosis">Prognosing
+        Idiopathic Pulmonary Fibrosis</a></li>
+        </ul></li>
+        <li><a href="#presentations-and-lectures"
+        id="toc-presentations-and-lectures">Presentations and
+        Lectures</a>
+        <ul>
+        <li><a href="#streams-and-lazy-evaluation"
+        id="toc-streams-and-lazy-evaluation">Streams and Lazy
+        Evaluation</a></li>
+        <li><a href="#on-the-catalan-numbers"
+        id="toc-on-the-catalan-numbers">On the Catalan Numbers</a></li>
+        <li><a href="#introductory-combinatory-logic"
+        id="toc-introductory-combinatory-logic">Introductory Combinatory
+        Logic</a></li>
+        </ul></li>
+        <li><a href="#university-courses"
+        id="toc-university-courses">University Courses</a>
+        <ul>
+        <li><a href="#waterloo-undergraduate-degree"
+        id="toc-waterloo-undergraduate-degree">Waterloo Undergraduate
+        Degree</a></li>
+        </ul></li>
+        <li><a href="#textbooks-readings"
+        id="toc-textbooks-readings">Textbooks &amp; Readings</a>
+        <ul>
+        <li><a href="#computer-science-textbooks"
+        id="toc-computer-science-textbooks">Computer Science
+        Textbooks</a></li>
+        <li><a href="#mathematics-textbooks"
+        id="toc-mathematics-textbooks">Mathematics Textbooks</a></li>
+        </ul></li>
+        </ul>
+      </nav>
+      <article>
+        <h1 id="mathematics-competitions">Mathematics Competitions</h1>
+        <hgroup>
+        <h2 id="competition-reference">Competition Reference</h2>
+        <a href="./competition-mathematics/reference.html">[html]</a>
+        </hgroup>
+        <h2 id="section"></h2>
+        <h1 id="projects">Projects</h1>
+        <hgroup>
+        <h2 id="interplanetary-file-explorer">Interplanetary File
+        Explorer</h2>
+        <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a
+        href="https://github.com/youssefsoli/IPFE">[github]</a> <a
+        href="https://devpost.com/software/changeme">[devpost]</a>
+        <p class="date">
+        Jan 2023
+        </p>
+        </hgroup>
+        <ul>
+        <li>A visual file explorer of an IPFS written in Golang, Python,
+        and JavaScript that uses one of Cohere’s NLP models to summarize
+        and categorize files based on metadata, and Estuary’s API to
+        fetch the files from the IPFS</li>
+        </ul>
+        <hgroup>
+        <h2 id="prognosing-idiopathic-pulmonary-fibrosis">Prognosing
+        Idiopathic Pulmonary Fibrosis</h2>
+        <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a>
+        <p class="date">
+        Dec 2023 - Jun 2021
+        </p>
+        </hgroup>
+        <ul>
+        <li>Several machine learning models written to predict the
+        deterioration of the condition of the lungs over time for
+        patients of Idiopathic Pulmonary Fibrosis and give a level of
+        confidence in the prediction</li>
+        </ul>
+        <h1 id="presentations-and-lectures">Presentations and
+        Lectures</h1>
+        <hgroup>
+        <h2 id="streams-and-lazy-evaluation">Streams and Lazy
+        Evaluation</h2>
+        @ Webber Academy Programming Club <a
+        href="./presentations/231013-streams.py">[notes]</a>
+        <p class="date">
+        Oct 13, 2023
+        </p>
+        </hgroup>
+        <ul>
+        <li>An introduction to simulating infinite lists with streams
+        and their manipulation</li>
+        </ul>
+        <hgroup>
+        <h2 id="on-the-catalan-numbers">On the Catalan Numbers</h2>
+        @ Webber Academy Math Society <a
+        href="./presentations/231011-catalan-numbers.pdf">[notes]</a>
+        <p class="date">
+        Oct 11, 2023
+        </p>
+        </hgroup>
+        <ul>
+        <li>A derivation of the closed formula for the Catalan Numbers
+        and examples of well known problems where the Catalan Numbers
+        appear</li>
+        </ul>
+        <hgroup>
+        <h2 id="introductory-combinatory-logic">Introductory Combinatory
+        Logic</h2>
+        @ Webber Academy Math Society
+        <p class="date">
+        Oct 11, 2022
+        </p>
+        </hgroup>
+        <ul>
+        <li>Introduction to combinatory logic; showing numbers and
+        operations on numbers can be expressed as combinators</li>
+        </ul>
+        <h1 id="university-courses">University Courses</h1>
+        <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
+        Degree</h2>
+        <table style="width:98%;">
+        <colgroup>
+        <col style="width: 4%" />
+        <col style="width: 15%" />
+        <col style="width: 15%" />
+        <col style="width: 15%" />
+        <col style="width: 15%" />
+        <col style="width: 15%" />
+        <col style="width: 15%" />
+        </colgroup>
+        <thead>
+        <tr class="header">
+        <th>Term</th>
+        <th colspan="6">Courses</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="odd">
+        <td>Fall ’22</td>
+        <td><span class="green ball"></span>MATH 145</td>
+        <td><span class="green ball"></span>MATH 147</td>
+        <td><span class="green ball"></span>CS 145</td>
+        <td><span class="green ball"></span>ENGL 109</td>
+        <td><span class="green ball"></span>PHYS 121</td>
+        <td></td>
+        </tr>
+        <tr class="even">
+        <td>Winter ’23</td>
+        <td><span class="green ball"></span>MATH 146</td>
+        <td><span class="green ball"></span>MATH 148</td>
+        <td><span class="green ball"></span>CS 146</td>
+        <td><span class="green ball"></span>ENGL 108B</td>
+        <td><span class="green ball"></span>PHYS 122</td>
+        <td><span class="green ball"></span>PD 1</td>
+        </tr>
+        <tr class="odd">
+        <td>Spring ’23</td>
+        <td><span class="green ball"></span>COOP 1</td>
+        <td><span class="green ball"></span>PD 11</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        </tr>
+        <tr class="even">
+        <td>Fall ’23</td>
+        <td><span class="yellow ball"></span>MATH 245</td>
+        <td><span class="yellow ball"></span>MATH 247</td>
+        <td><span class="yellow ball"></span>STAT 240</td>
+        <td><span class="yellow ball"></span>CS 245E</td>
+        <td><span class="yellow ball"></span>CS 246E</td>
+        <td></td>
+        </tr>
+        <tr class="odd">
+        <td>Winter ’24</td>
+        <td><span class="red ball"></span>MATH 249</td>
+        <td><span class="red ball"></span>STAT 241</td>
+        <td><span class="red ball"></span>CO 255</td>
+        <td><span class="red ball"></span>CS 240E</td>
+        <td><span class="red ball"></span>CS 241</td>
+        <td><span class="red ball"></span>JAPAN 101R</td>
+        </tr>
+        </tbody>
         </table>
-        <table>
-          <thead><tr>
-            <th>Prognosing IPF <a href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a></th>
-            <td>Dec 2020 - Jun 2021</td>
-          </tr></thead>
-          <tbody><tr><td colspan=2><ul>
-            <li>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients of Idiopathic Pulmonary Fibrosis and give a level of confidence in the prediction</li>
-          </ul></td></tr></tbody>
-        </table>
-      </section>
-
-      <section class="card-container">
-        <h2>Presentations & Lectures</h2>
-        <table>
-          <thead><tr>
-            <th>Streams and Lazy Evaluation <span class="location">@ Webber Academy Programming Club</span> <a href="./presentations/231013-streams.py">[notes]</a></th>
-            <td>Oct 13, 2023</td>
-          </tr></thead>
-          <tbody><tr><td colspan=2><ul>
-            <li>An introduction to simulating infinite lists with streams and their manipulation.</li>
-          </ul></td></tr></tbody>
-        </table>
-        <table>
-          <thead><tr>
-            <th>On the Catalan Numbers <span class="location">@ Webber Academy Math Society</span> <a href="./presentations/231011-catalan-numbers.pdf">[notes]</a></th>
-            <td>Oct 11, 2023</td>
-          </tr></thead>
-          <tbody><tr><td colspan=2><ul>
-            <li>A derivation of the closed formula for the Catalan Numbers and examples of well known problems where the Catalan Numbers appear</li>
-          </ul></td></tr></tbody>
-        </table>
-      </section>
-
-      <section>
-          <h2>University Courses</h2>
-          <table>
-            <caption>Waterloo Undergraduate Courses</caption>
-            <thead>
-              <tr>
-                <th scope=col rowspan=2>Term</th>
-                <th scope=col colspan=11>Course</th>
-              </tr>
-              <tr>
-                <th scope=col colspan=2>MATH</th>
-                <th scope=col colspan=1>STAT</th>
-                <th scope=col colspan=1>CO</th>
-                <th scope=col colspan=2>CS</th>
-                <th scope=col colspan=1>ENGL</th>
-                <th scope=col colspan=1>PHYS</th>
-                <th scope=col colspan=1>JAPAN</th>
-                <th scope=col colspan=1>COOP</th>
-                <th scope=col colspan=1>PD</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Fall '22</td>
-                <td title="Algebra (Advanced Level)">145</td>
-                <td title="Calculus 1 (Advanced Level)">147</td>
-                <td></td>
-                <td></td>
-                <td title="Designing Functional Programs (Advanced Level)">145</td>
-                <td></td>
-                <td title="Introduction to Academic Writing">109</td>
-                <td title="Mechanics">121</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Winter '23</td>
-                <td title="Linear Algebra 1 (Advanced Level)">146</td>
-                <td title="Calculus 2 (Advanced Level)">148</td>
-                <td></td>
-                <td></td>
-                <td title="Elementary Algorithm Design and Data Abstraction (Advanced Level)">146</td>
-                <td></td>
-                <td title="Global English Literatures">108B</td>
-                <td title="Waves, Electricity and Magnetism">122</td>
-                <td></td>
-                <td></td>
-                <td title="Career Fundamentals">1</td>
-              </tr>
-              <tr>
-                <td>Spring '23</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td title="Co-operative Work Term at Dandelion Networks">1</td>
-                <td title="Processes for Technical Report Writing">11</td>
-              </tr>
-              <tr>
-                <td>Fall '23</td>
-                <td title="Linear Algebra 2 (Advanced Level)">245</td>
-                <td title="Calculus 3 (Advanced Level)">247</td>
-                <td title="Probability (Advanced Level)">240</td>
-                <td></td>
-                <td title="Logic and Computation (Enriched)">245E</td>
-                <td title="Object-Oriented Software Development (Enriched)">246E</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Winter '24</td>
-                <td title="Introduction to Combinatorics (Advanced Level)">249</td>
-                <td></td>
-                <td title="Statistics (Advanced Level)">241</td>
-                <td title="Introduction to Optimization (Advanced Level)">255</td>
-                <td title="Data Structures and Data Management (Enriched)">240E</td>
-                <td title="Foundations of Sequential Programs">241</td>
-                <td></td>
-                <td></td>
-                <td title="First-Year Japanese 1">101R</td>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
-      </section>
+        <h1 id="textbooks-readings">Textbooks &amp; Readings</h1>
+        <h2 id="computer-science-textbooks">Computer Science
+        Textbooks</h2>
+        <p><span class="green ball"></span><em>Learn You a Haskell for
+        Great Good!</em> by Miran Lipovača</p>
+        <p><span class="yellow ball"></span><em>Concurrency in Go</em>
+        by Katherine Cox-Buday</p>
+        <p><span class="yellow ball"></span><em>Specifying Systems</em>
+        by Leslie Lamport</p>
+        <p><span class="yellow ball"></span><em>Category Theory for
+        Programmers</em> by Bartosz Milewski</p>
+        <p><span class="yellow ball"></span><em>Effective Modern
+        C++</em> by Scott Meyers</p>
+        <p><span class="red ball"></span><em>Real World Haskell</em> by
+        O’Sullivan, Stewart &amp; Goerzen</p>
+        <p><span class="red ball"></span><em>Structure and
+        Interpretation of Computer Programs</em> by Abelson, Sussman
+        &amp; Sussman</p>
+        <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
+        <p><span class="green ball"></span><em>To Mock a
+        Mockingbird</em> by Raymond Smullyan</p>
+        <p><span class="yellow ball"></span><em>The Red Book of
+        Mathematical Problems</em> by Williams &amp; Hardy</p>
+      </article>
     </main>
     <footer>
     </footer>
