--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="#mathematics-competitions"
         id="toc-mathematics-competitions">Mathematics Competitions</a>
         <ul>
+        <li><a href="#accolades" id="toc-accolades">Accolades</a></li>
         <li><a href="#competition-reference"
         id="toc-competition-reference">Competition Reference</a></li>
         <li><a href="#section" id="toc-section"></a></li>
@@ -33,9 +34,8 @@
         id="toc-prognosing-idiopathic-pulmonary-fibrosis">Prognosing
         Idiopathic Pulmonary Fibrosis</a></li>
         </ul></li>
-        <li><a href="#presentations-and-lectures"
-        id="toc-presentations-and-lectures">Presentations and
-        Lectures</a>
+        <li><a href="#presentations-lectures"
+        id="toc-presentations-lectures">Presentations &amp; Lectures</a>
         <ul>
         <li><a href="#streams-and-lazy-evaluation"
         id="toc-streams-and-lazy-evaluation">Streams and Lazy
@@ -66,6 +66,15 @@
       </nav>
       <article>
         <h1 id="mathematics-competitions">Mathematics Competitions</h1>
+        <h2 id="accolades">Accolades</h2>
+        <ul>
+        <li>335<sup>th</sup>, score 26; 2022 <strong>William Lowell
+        Putnam Mathematical Competition</strong></li>
+        <li>10<sup>th</sup> in Canada; 2022 <strong>Asian Pacific
+        Mathematics Olympiad</strong></li>
+        <li>18<sup>th</sup> in Canada, 2 time qualifier; 2021-22
+        <strong>Canadian Mathematical Olympiad</strong></li>
+        </ul>
         <hgroup>
         <h2 id="competition-reference">Competition Reference</h2>
         <a href="./competition-mathematics/reference.html">[html]</a>
@@ -102,7 +111,7 @@
         patients of Idiopathic Pulmonary Fibrosis and give a level of
         confidence in the prediction</li>
         </ul>
-        <h1 id="presentations-and-lectures">Presentations and
+        <h1 id="presentations-lectures">Presentations &amp;
         Lectures</h1>
         <hgroup>
         <h2 id="streams-and-lazy-evaluation">Streams and Lazy
